# netbox.rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/netbox/: Cargo.toml
crates/netbox-cli/: Cargo.toml
crates/netbox-cli/docs/: cli.md
crates/netbox-cli/src/: main.rs
crates/netbox-openapi/: .openapi-generator-ignore  Cargo.toml  README.md
crates/netbox-openapi/.openapi-generator/: FILES
crates/netbox-openapi/docs/: Aggregate.md  AggregateFamily.md  AggregateRequest.md  Asn.md  AsnRange.md  AsnRangeRequest.md  AsnRangeRequestRir.md  AsnRangeRequestTenant.md  AsnRequest.md  AsnRequestRir.md  AvailableAsn.md  AvailableIp.md  AvailablePrefix.md  AvailableVlan.md  BackgroundTask.md  BackgroundTaskRequest.md  Bookmark.md  BookmarkRequest.md  BookmarkRequestUser.md  Branch.md  BranchEvent.md  BranchEventType.md  BranchStatus.md  BriefBranch.md  BriefCable.md  BriefCableRequest.md  BriefCircuit.md  BriefCircuitGroup.md  BriefCircuitGroupAssignmentSerializer.md  BriefCircuitGroupAssignmentSerializerPriority.md  BriefCircuitGroupAssignmentSerializerRequest.md  BriefCircuitGroupAssignmentSerializerRequestGroup.md  BriefCircuitGroupRequest.md  BriefCircuitRequest.md  BriefCircuitRequestProvider.md  BriefCircuitType.md  BriefCircuitTypeRequest.md  BriefCluster.md  BriefClusterGroup.md  BriefClusterGroupRequest.md  (+880 more)
crates/netbox-openapi/src/: lib.rs
crates/netbox-openapi/src/apis/: circuits_api.rs  configuration.rs  core_api.rs  dcim_api.rs  extras_api.rs  ipam_api.rs  mod.rs  plugins_api.rs  schema_api.rs  status_api.rs  tenancy_api.rs  users_api.rs  virtualization_api.rs  vpn_api.rs  wireless_api.rs
crates/netbox-openapi/src/models/: aggregate.rs  aggregate_family.rs  aggregate_request.rs  asn.rs  asn_range.rs  asn_range_request.rs  asn_range_request_rir.rs  asn_range_request_tenant.rs  asn_request.rs  asn_request_rir.rs  available_asn.rs  available_ip.rs  available_prefix.rs  available_vlan.rs  background_task.rs  background_task_request.rs  bookmark.rs  bookmark_request.rs  bookmark_request_user.rs  branch.rs  branch_event.rs  branch_event_type.rs  branch_status.rs  brief_branch.rs  brief_cable.rs  brief_cable_request.rs  brief_circuit.rs  brief_circuit_group.rs  brief_circuit_group_assignment_serializer_.rs  brief_circuit_group_assignment_serializer__priority.rs  brief_circuit_group_assignment_serializer_request.rs  brief_circuit_group_assignment_serializer_request_group.rs  brief_circuit_group_request.rs  brief_circuit_request.rs  brief_circuit_request_provider.rs  brief_circuit_type.rs  brief_circuit_type_request.rs  brief_cluster.rs  brief_cluster_group.rs  brief_cluster_group_request.rs  (+868 more)
crates/netbox/docs/: client.md
crates/netbox/examples/: README.md  create_config_context.rs  create_tag.rs  list_tenants.rs  status.rs
crates/netbox/src/: client.rs  config.rs  error.rs  lib.rs  pagination.rs  query.rs  resource.rs  schema.rs  status.rs
crates/netbox/src/circuits/: mod.rs
crates/netbox/src/core/: mod.rs
crates/netbox/src/dcim/: mod.rs
crates/netbox/src/extras/: mod.rs
crates/netbox/src/ipam/: mod.rs
crates/netbox/src/plugins/: mod.rs
crates/netbox/src/tenancy/: mod.rs
crates/netbox/src/users/: mod.rs
crates/netbox/src/virtualization/: mod.rs
crates/netbox/src/vpn/: mod.rs
crates/netbox/src/wireless/: mod.rs
crates/netbox/tests/: smoke_local.rs
docs/: cli.md  client.md  index.md  local-netbox.md
scripts/: README.md  fetch_schema.sh  generate.sh  release_local.sh  run_assurance.sh  run_cli_smoke.sh  run_smoke.sh  run_static.sh
