[package]
name = "netbox-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "full-featured cli client for the netbox api"
readme = "docs/cli.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
netbox = { version = "0.1.4", path = "../netbox" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_urlencoded = "0.7"
async-trait = "0.1"

[[bin]]
name = "netbox-cli"
path = "src/main.rs"
