[package]
name = "netbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ergonomic rust client for NetBox 4.x REST API"
keywords.workspace = true
categories.workspace = true

[dependencies]
netbox-openapi = { version = "0.0.1", path = "../netbox-openapi" }
reqwest = { workspace = true }
reqwest_legacy = { package = "reqwest", version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
proptest = "1.5"
httpmock = "0.7"

[features]
default = []
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
